--- a/NLACD_T3.ipynb
+++ b/NLACD_T3.ipynb
@@ -148,7 +148,7 @@
    "id": "cf7bc57f",
    "metadata": {},
    "source": [
-    "Exersice: \n",
+    "Exercise: \n",
     "1: Design the methods for all different types of IMC-PID controllers.\n",
     "\n",
     "2: compare the performance of each controller type using a standard test system.\n",
